Project1/typescript
Script started on Fri 22 Jan 2016 09:01:39 PM PST
]0;bryce@Brycbuntu: ~/CS202/Project1bryce@Brycbuntu:~/CS202/Project1$ g++ Project1.cpp -o p1
Project1.cpp: In function ‘int main()’:
Project1.cpp:58:2: error: return-statement with no value, in function returning ‘int’ [-fpermissive]
  return;
  ^
]0;bryce@Brycbuntu: ~/CS202/Project1bryce@Brycbuntu:~/CS202/Project1$ ^C
]0;bryce@Brycbuntu: ~/CS202/Project1bryce@Brycbuntu:~/CS202/Project1$ exit
exit

Script done on Fri 22 Jan 2016 09:04:11 PM PST
Script started on Fri 22 Jan 2016 09:05:34 PM PST
]0;bryce@Brycbuntu: ~/CS202/Project1bryce@Brycbuntu:~/CS202/Project1$ exitg++ Project1.cpp -o p1
]0;bryce@Brycbuntu: ~/CS202/Project1bryce@Brycbuntu:~/CS202/Project1$ ./p1[K[K[K[Kexit
exit

Script done on Fri 22 Jan 2016 09:05:54 PM PST
Script started on Fri 22 Jan 2016 09:08:31 PM PST
]0;bryce@Brycbuntu: ~/CS202/Project1bryce@Brycbuntu:~/CS202/Project1$ ./p1
Input the name of the file to be read (Include the extension, must be less than 22 characters): list.txt
Input the number of names: 12
LukeLeiaHanChewieObi-WanVaderAlderanNabooTatooineEndorC-3POR2-D2]0;bryce@Brycbuntu: ~/CS202/Project1bryce@Brycbuntu:~/CS202/Project1$ ./p1exit
exit

Script done on Fri 22 Jan 2016 09:09:01 PM PST
Script started on Fri 22 Jan 2016 09:09:26 PM PST
]0;bryce@Brycbuntu: ~/CS202/Project1bryce@Brycbuntu:~/CS202/Project1$ exit./p1exitg++ Project1.cpp -o p1exit[Kg++ Project1.cpp -o p1exit[Kg++ Project1.cpp -o p1
]0;bryce@Brycbuntu: ~/CS202/Project1bryce@Brycbuntu:~/CS202/Project1$ ./p1
Input the name of the file to be read (Include the extension, must be less than 22 characters): list.txt
Input the number of names: 12
Luke
Leia
Han
Chewie
Obi-Wan
Vader
Alderan
Naboo
Tatooine
Endor
C-3PO
R2-D2
]0;bryce@Brycbuntu: ~/CS202/Project1bryce@Brycbuntu:~/CS202/Project1$ exit
exit

Script done on Fri 22 Jan 2016 09:09:51 PM PST
